# rational-cpp

./: .gitignore  CMakeLists.txt  README.md  RationalOptions.cmake.sample
.github/workflows/: continuous.yml
cmake/find/: FindGMP.cmake
cmake/rational/: rational_filter_flags.cmake  rational_use_colors.cmake  rational_warnings.cmake
cmake/recipes/: catch2.cmake  gmp.cmake  gmp_mpfr.cmake
src/rational/: CMakeLists.txt  rational.cpp  rational.hpp
tests/: CMakeLists.txt  test_rational.cpp
